# QSMD

./: CMakeLists.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Source/: QSMP DUPLEX.sln
Source/Listener/: QSMD Listener.vcxproj  applnr.c  applnr.h
Source/QSMD/: QSMD.vcxproj  QSMD.vcxproj.filters  client.c  client.h  doxymain.h  kex.c  kex.h  logger.c  logger.h  qsmd.c  qsmd.h  qsmdcommon.h
Source/Sender/: QSMD Sender.vcxproj  appsdr.c  appsdr.h
